k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crisp-game
  labels:
    name: crisp-game
    project: m5stick-multiplayer
